trying to fix hamburger bug on mobile

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@
  * Help from: https://codepen.io/erikterwan/pen/grOZxx
  */
 
-body {
+html, body {
 	overflow-x: hidden;
 }
 
